:fix: scrollbar KO

--- a/style.css
+++ b/style.css
@@ -647,7 +647,7 @@ h2.tittleNavFooter {
     }
 
     article.popularHostingCards {
-        margin-right: 3rem;
+        margin-left: 1.8rem;
     }
 
     .tittlePopularHosting h2 {
@@ -661,7 +661,7 @@ h2.tittleNavFooter {
     /* ----- hébergements classique ------- */
     #articleHosting {
         width: 95%;
-        margin-left: -2.5rem;
+        margin-left: -1rem;
     }
 
     .tittleHosting h2 {
@@ -674,7 +674,7 @@ h2.tittleNavFooter {
         flex-flow: row wrap;
         width: 100%;
         margin-top: 1rem;
-        margin-left: -3rem;
+        margin-left: -1rem;
     }
 
     .activityCards {
@@ -927,16 +927,28 @@ h2.tittleNavFooter {
         padding-right: 3.3rem;
     }
 
+    .tittlePopularHosting {
+        margin-left: 3.5rem;
+    }
+    .popularHostingCards {
+        margin-left: 3rem;
+    }
+
     /* ----- hébergements classique ------- */
     #articleHosting {
         width: 95%;
         margin-right: 0;
+        margin-left: 0.5rem;
     }
 
     /* ----- Activités ----- */
     #articleActivities {
         width: 95%;
-        margin-left: -0.5rem;
+        margin-left: 2rem;
+    }
+
+    #articleActivities h2 {
+        margin-left: 3rem;
     }
 
     /* ----- footer ----- */
@@ -958,10 +970,10 @@ h2.tittleNavFooter {
 /* =================================== */
 /* Responsive 864px - Iphone X   */
 /* =================================== */
-
 @media screen and (max-width: 414px) {
 
     header {
+        width: 90%;
         display: grid;
         grid-template-columns: auto 1fr auto;
         grid-template-areas:
@@ -975,8 +987,10 @@ h2.tittleNavFooter {
     }
 
     #register {
-        margin-left: -8rem;
-        margin-top: -1.5rem;
+        position: relative;
+        right: 7rem;
+        bottom: 2.5rem;
+        margin-right: 0;
         font-size: 1.2rem;
         font-weight: bolder;
     }
@@ -984,11 +998,11 @@ h2.tittleNavFooter {
     nav.mainNav {
         max-width: 604px;
         width: 100%;
-        margin: 4rem 0 0 -13rem;
+        margin: 4rem 0 0 -15rem;
     }
 
     nav.mainNav a {
-        margin-right:0;
+        margin-right: 0;
         padding-bottom: 1rem;
         font-size: 1.2rem;
         font-weight: bolder;
@@ -1002,12 +1016,12 @@ h2.tittleNavFooter {
         border-bottom: 3px #0065FC solid;
         margin-left: 3rem;
         padding-left: 2rem;
-        padding-right: 5.5rem;
+        padding-right: 5.6rem;
     }
 
     nav.mainNav a[data-active=false] {
         padding-left: 3em;
-        padding-right: 3rem;
+        padding-right: 2.5rem;
     }
 
     /* ----- Research ----- */
@@ -1041,9 +1055,10 @@ h2.tittleNavFooter {
         padding-right: 0;
     }
 
-    .infoHosting{
+    .infoHosting {
         width: 93%;
     }
+
     /* ----- all hébergements ------ */
     section.allArticleHosting {
         max-width: 414px;
@@ -1054,14 +1069,13 @@ h2.tittleNavFooter {
 
     /* ----- Hébergement les plus populaires ------ */
     #articlePopularHosting {
-        width: 92%;
+        width: 90%;
         display: flex;
         flex-flow: column wrap;
         order: -1;
         border-radius: 0;
-        padding-right: 2.4rem;
-        padding-left: 2.8rem;
         margin-bottom: 0;
+        padding-right: 3.5rem;
     }
 
     div.tittlePopularHosting h2 {
@@ -1071,9 +1085,9 @@ h2.tittleNavFooter {
 
     article.popularHostingCards {
         max-width: 25rem;
-        height:9rem;
+        height: 9rem;
         width: 100%;
-        margin-left: -0.8rem;
+        margin-left: 1.5rem;
     }
 
     figure.popularHosting figcaption h3 {
@@ -1086,6 +1100,7 @@ h2.tittleNavFooter {
         margin-bottom: 2rem;
         margin-left: -1rem;
     }
+
     article.popularHostingCards div.noteHosting {
         margin-left: -1rem;
     }
@@ -1099,6 +1114,7 @@ h2.tittleNavFooter {
         margin-top: -1.1rem;
         margin-left: -2.6rem;
     }
+
     /* ------ Hébergement classique ------ */
     #articleHosting {
         width: 92%;
@@ -1116,11 +1132,13 @@ h2.tittleNavFooter {
         padding: 0.375rem;
         width: 25rem;
         height: 13rem;
-        margin-left: 1rem;
+        margin-left: 1.5rem;
     }
+
     div.tittleHosting h2 {
         font-size: 1.4em;
         font-weight: bolder;
+        margin-left: 0;
     }
 
     figure.hosting figcaption h3 {
@@ -1190,7 +1208,7 @@ h2.tittleNavFooter {
         width: 100%;
         display: flex;
         flex-flow: column nowrap;
-        padding-right: 1.3rem;
+        padding-right: 0;
     }
 
     nav.about {
@@ -1218,36 +1236,47 @@ h2.tittleNavFooter {
         font-size: 1rem;
     }
 }
-/* ==================================== */
-/* Responsive 864px - Iphone 6/7/8 */
-/* ==================================== */
 
+/* ==================================== */
+/* Responsive 375px - Iphone 6/7/8 */
+/* ==================================== */
 @media screen and (max-width: 375px) {
+
+    main {
+        width: 95%;
+        margin: 0;
+    }
 
     nav.mainNav a[data-active=false] {
         padding-left: 2em;
-        padding-right: 1.6rem;
+        padding-right: 2.3rem;
+    }
+
+    .searchResultWrapiconIcon {
+        width: 3rem;
     }
 
     /* ----- Hébergement les plus populaires ------ */
     #articlePopularHosting {
-        padding-right: 0.8rem;
+        padding-right: 2.4rem;
+        margin-left: 1rem;
     }
 
-    article.popularHostingCards{
-        margin-left: -1.3rem;
+    article.popularHostingCards {
+        margin-left: 0.5rem;
     }
 
     /* ----- Hébergement classique ------ */
-    #articleHosting {
-        margin-left: -1.5rem;
+    div.tittleHosting h2 {
+        margin-left: 1rem;
     }
+
     article.hostingCards {
         background-color: white;
         padding: 0.375rem;
         width: 23rem;
         height: 13rem;
-        margin-left: 1rem;
+        margin-left: 4rem;
     }
 
     div.hostingImg img {
@@ -1257,29 +1286,37 @@ h2.tittleNavFooter {
 
     /* ----- activités ----- */
     #articleActivities {
-        margin-left: -1.3rem;
+        width: 92%;
+        padding-right: 0;
+        margin-left: -0.8rem;
+    }
+
+    #articleActivities h2 {
+        width: 92%;
+        margin-left: 1.8rem;
     }
 
     img.smallActivityImg {
-        width: 22rem;
+        width: 23rem;
     }
 
     img.activityImg {
-        width: 22rem;
+        width: 23rem;
     }
 
     img.greatActivityImg {
-        width: 22rem;
+        width: 23rem;
 
     }
 
     article.activityCards {
-        max-width: 22rem;
-        width: 22rem;
+        max-width: 23rem;
+        width: 23rem;
     }
+
     /* ----- Footer ------ */
     footer {
         width: 100%;
-        padding-right: 2rem;
+        padding-right: 0rem;
     }
 }
